--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "forever": "^4.0.3"
   },
   "dependencies": {
+    "https": "^1.0.0",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
     "koa-body-parser": "^0.2.1",
     "koa-static": "^5.0.0",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "wss": "^3.3.4"
   }
 }
